feat: style for section checkList

--- a/src/content/dev-tools.html
+++ b/src/content/dev-tools.html
@@ -333,47 +333,50 @@
                         <ul class="accessibility__list">
                             <li class="accessibility__item"><a href="https://achecker.ca/checker/index.php"
                                     target="_blank" rel="noopener noreferrer"
-                                    class="accessibility">https://achecker.ca/checker/index.php</a></li>
+                                    class="accessibility__link">https://achecker.ca/checker/index.php</a></li>
                             <li class="accessibility__item"><a href="http://contrast-ratio.com/" target="_blank"
-                                    rel="noopener noreferrer" class="accessibility">http://contrast-ratio.com/</a></li>
+                                    rel="noopener noreferrer" class="accessibility__link">http://contrast-ratio.com/</a>
+                            </li>
                             <li class="accessibility__item"><a href="http://wave.webaim.org/" target="_blank"
-                                    rel="noopener noreferrer" class="accessibility">http://wave.webaim.org/</a></li>
+                                    rel="noopener noreferrer" class="accessibility__link">http://wave.webaim.org/</a>
+                            </li>
                             <li class="accessibility__item"><a
                                     href="https://websiteseochecker.com/html-sitemap-generator/" target="_blank"
                                     rel="noopener noreferrer"
-                                    class="accessibility">https://websiteseochecker.com/html-sitemap-generator/</a></li>
+                                    class="accessibility__link">https://websiteseochecker.com/html-sitemap-generator/</a>
+                            </li>
                         </ul>
                     </section>
                     <section class="security">
                         <h4 class="security__header">Bezpieczeństwo</h4>
                         <ul class="security__list">
                             <li class="security__item"><a href="https://securityheaders.com" target="_blank"
-                                    rel="noopener noreferrer" class="seciurity__link">https://securityheaders.com</a>
+                                    rel="noopener noreferrer" class="security__link">https://securityheaders.com</a>
                             </li>
                             <li class="security__item"><a href="https://webbkoll.dataskydd.net/en" target="_blank"
                                     rel="noopener noreferrer"
-                                    class="seciurity__link">https://webbkoll.dataskydd.net/en</a></li>
+                                    class="security__link">https://webbkoll.dataskydd.net/en</a></li>
                             <li class="security__item"><a href="https://observatory.mozilla.org/" target="_blank"
                                     rel="noopener noreferrer"
-                                    class="seciurity__link">https://observatory.mozilla.org/</a></li>
+                                    class="security__link">https://observatory.mozilla.org/</a></li>
                             <li class="security__item"><a href="https://letsencrypt.org/" target="_blank"
-                                    rel="noopener noreferrer" class="seciurity__link">https://letsencrypt.org/</a></li>
+                                    rel="noopener noreferrer" class="security__link">https://letsencrypt.org/</a></li>
                             <li class="security__item"><a href="https://www.ssllabs.com/ssltest/index.html"
                                     target="_blank" rel="noopener noreferrer"
-                                    class="seciurity__link">https://www.ssllabs.com/ssltest/index.html</a></li>
+                                    class="security__link">https://www.ssllabs.com/ssltest/index.html</a></li>
                         </ul>
                     </section>
-                    <section class="image">
-                        <h4 class="image__header">Optymalizacja obrazów</h4>
-                        <ul class="image__list">
-                            <li class="image__item"><a href="https://github.com/imagemin/imagemin" target="_blank"
+                    <section class="opt-image">
+                        <h4 class="opt-image__header">Optymalizacja obrazów</h4>
+                        <ul class="opt-image__list">
+                            <li class="opt-image__item"><a href="https://github.com/imagemin/imagemin" target="_blank"
                                     rel="noopener noreferrer"
-                                    class="image__link">https://github.com/imagemin/imagemin</a></li>
-                            <li class="image__item"><a href="https://tinyjpg.com/" target="_blank"
-                                    rel="noopener noreferrer" class="image__link">https://tinyjpg.com/</a></li>
-                            <li class="image__item"><a href="https://simplesharingbuttons.com/#intro" target="_blank"
-                                    rel="noopener noreferrer"
-                                    class="image__link">https://simplesharingbuttons.com/#intro</a></li>
+                                    class="opt-image__link">https://github.com/imagemin/imagemin</a></li>
+                            <li class="opt-image__item"><a href="https://tinyjpg.com/" target="_blank"
+                                    rel="noopener noreferrer" class="opt-image__link">https://tinyjpg.com/</a></li>
+                            <li class="opt-image__item"><a href="https://simplesharingbuttons.com/#intro"
+                                    target="_blank" rel="noopener noreferrer"
+                                    class="opt-image__link">https://simplesharingbuttons.com/#intro</a></li>
                         </ul>
                     </section>
                     <section class="performance">
