--- a/game.html
+++ b/game.html
@@ -153,22 +153,40 @@
         <article class="article">
             <button class="article__button article__button--position" aria-label="otwórz menu sekcji"><span
                     class="menuButton__line article__button__line--js">|</span></button>
-            <header class="article__nav">
-                <nav class="article__menu">
-                    <ul class="article__list">
-                        <li class="article__item"><a class="article__link" href="#read">CODE COMBAT</a></li>
-                        <li class="article__item"><a class="article__link" href="#doc">CSS Diner</a></li>
-                        <li class="article__item"><a class="article__link" href="#tools">Flexbox Froggy</a></li>
-                        <li class="article__item"><a class="article__link" href="#watch">Grid Garden</a></li>
-                        <li class="article__item"><a class="article__link" href="#list">Codewars</a></li>
-                    </ul>
-                </nav>
-            </header>
-            <h2 class="article__header">Dev tools</h2>
+            <h2 class="article__header">Dev game</h2>
             <div class="wrapper">
-                <section class="section" id="multimedia">
-                    <h3 class="section__header">Multimedia</h3>
-
+                <section class="game">
+                    <h4 class="game__header">Gry dla programistów</h4>
+                    <ul class="game__list">
+                        <li class="game__item"><a href="https://codecombat.com/" target="_blank"
+                                rel="noopener noreferrer" class="game__link"><span class="game__title">Code
+                                    combat</span>CodeCombat to oparty na grach program komputerowy, w którym uczniowie
+                                wpisują prawdziwy kod i obserwują, jak ich postacie reagują w czasie rzeczywistym.</a>
+                        </li>
+                        <li class="game__item"><a href="https://flukeout.github.io/" target="_blank"
+                                rel="noopener noreferrer" class="game__link game__link--cover1"><span
+                                    class="game__title">CSS
+                                    Diner</span>Dostań się do wszystkich elementów i zostań mistrzem CSS 💪</a>
+                        </li>
+                        <li class="game__item"><a href="https://flexboxfroggy.com/#pl" target="_blank"
+                                rel="noopener noreferrer" class="game__link game__link--cover2"><span
+                                    class="game__title">Flexbox
+                                    Froggy</span>Witaj w grze Flexbox Froggy. Grze, w której pomagasz żabce Froggy i jej
+                                przyjaciołom pisząc kod CSS! 🐸</a>
+                        </li>
+                        <li class="game__item"><a href="https://cssgridgarden.com/#pl" target="_blank"
+                                rel="noopener noreferrer" class="game__link game__link--cover3"><span
+                                    class="game__title">Grid
+                                    Garden</span>Witaj w grze Grid Garden, w której pisząc kod CSS rozwijasz swój ogród
+                                z marchewkami! Podlewaj tylko pola z marchewkami, w ten sposób dbasz o nie! 🥕</a>
+                        </li>
+                        <li class="game__item"><a href="https://www.codewars.com/" target="_blank"
+                                rel="noopener noreferrer" class="game__link game__link--cover4"><span
+                                    class="game__title">codewars</span>Popraw swoje umiejętności, trenując z innymi
+                                osobami podejmujesz wyzwanie prawdziwego kodera! Sięgnij po mistrzostwo!
+                            </a>
+                        </li>
+                    </ul>
                 </section>
             </div>
         </article>
