feat: updated style for view  mobile

--- a/src/content/dev-tools.html
+++ b/src/content/dev-tools.html
@@ -172,34 +172,40 @@
                         <li class="section-read__item"><a href="https://www.nafrontendzie.pl/" target="_blank"
                                 rel="noopener noreferrer" class="section-read__link"> <span
                                     class="section-read__title">NA
-                                    FRONTENDZIE</span><span>"Cześć! Jestem Bartek i witam Cię na moim blogu! Piszę tutaj
+                                    FRONTENDZIE</span><span class="section-read__description">"Cześć! Jestem Bartek i
+                                    witam Cię na moim blogu! Piszę tutaj
                                     głównie o JavaScript
                                     i React ale pojawiają się też wpisy na temat innych obszarów frontendu."</span></a>
                         </li>
                         <li class="section-read__item"><a href="https://www.conventionalcommits.org/pl/v1.0.0-beta.2/"
                                 target="_blank" rel="noopener noreferrer" class="section-read__link"><span
                                     class="section-read__title">Konwencjonalne
-                                    Commity</span><span>Specyfikacja dodawania znaczenia
+                                    Commity</span><span class="section-read__description">Specyfikacja dodawania
+                                    znaczenia
                                     czytelnego dla człowieka do commit komunikatów.</span></a></li>
                         <li class="section-read__item"><a
                                 href="https://przeprogramowani.pl/wydanie/skuteczna-nauka-programowania" target="_blank"
                                 rel="noopener noreferrer" class="section-read__link">
-                                <span class="section-read__title">Przeprogramowani</span><span>Skuteczna nauka
+                                <span class="section-read__title">Przeprogramowani</span><span
+                                    class="section-read__description">Skuteczna nauka
                                     programowania.</span></a>
                         </li>
                         <li class="section-read__item"><a href="https://roadmap.sh/frontend" target="_blank"
                                 rel="noopener noreferrer" class="section-read__link"> <span
-                                    class="section-read__title">roadmap.sh</span><span>Mapa
+                                    class="section-read__title">roadmap.sh</span><span
+                                    class="section-read__description">Mapa
                                     rozwoju frontendowca.</span></a></li>
                         <li class="section-read__item"><a href="https://bedekodzic.pl/" target="_blank"
                                 rel="noopener noreferrer" class="section-read__link"><span
-                                    class="section-read__title">Bedekodzic.pl</span><span>Blog o
+                                    class="section-read__title">Bedekodzic.pl</span><span
+                                    class="section-read__description">Blog o
                                     programowaniu i świecie IT. O tym jak podejść do nauki i jak sobie radzić z tym
                                     wszystkim. Mam nadzieję, że dzięki niemu zostaniesz lepszym Web Developerem i
                                     Programistą 🙂</span></a></li>
                         <li class="section-read__item"><a href="https://www.webkrytyk.pl/" target="_blank"
                                 rel="noopener noreferrer" class="section-read__link"><span
-                                    class="section-read__title">WebKrytyk</span><span>Kilka
+                                    class="section-read__title">WebKrytyk</span><span
+                                    class="section-read__description">Kilka
                                     słów krytyki o polskich stronach WWW.</span></a></li>
                     </ul>
                 </section>
@@ -209,54 +215,65 @@
                         <li class="section-doc__item"><a href="https://developer.mozilla.org/pl/" target="_blank"
                                 rel="noopener noreferrer" class="section-doc__link"><span class="section-doc__title">MDN
                                     web
-                                    docs</span><span>Zasoby dla programistów, przez programistów.</span></a></li>
+                                    docs</span><span class="section-doc__description">Zasoby dla programistów, przez
+                                    programistów.</span></a></li>
                         <li class="section-doc__item"><a href="https://devdocs.io" target="_blank"
                                 rel="noopener noreferrer" class="section-doc__link"><span
-                                    class="section-doc__title">DevDocs</span><span>Wiele
+                                    class="section-doc__title">DevDocs</span><span
+                                    class="section-doc__description">Wiele
                                     dokumentacji w jednym miejscu. Dzięki przyjaznemu interfejsowi w szybki sposób
                                     poszukasz tego, co potrzebujesz.</span></a></li>
                         <li class="section-doc__item"><a href="https://css-tricks.com/" target="_blank"
                                 rel="noopener noreferrer" class="section-doc__link"><span
-                                    class="section-doc__title">css-tricks</span><span>
+                                    class="section-doc__title">css-tricks</span><span class="section-doc__description">
                                     Przykłady, rozwiązania, aktualności frontendowe</span></a></li>
                         <li class="section-doc__item"><a href="https://stackoverflow.com/" target="_blank"
                                 rel="noopener noreferrer" class="section-doc__link"><span
-                                    class="section-doc__title">stackoverflow</span><span>Ogromna społeczność
+                                    class="section-doc__title">stackoverflow</span><span
+                                    class="section-doc__description">Ogromna społeczność
                                     programistyczna, niebo dla programisty.</span></a></li>
                         <li class="section-doc__item"><a href="https://github.com/
                             " target="_blank" rel="noopener noreferrer" class="section-doc__link"><span
-                                    class="section-doc__title">GitHub</span><span>Ogromna baza repozytoriów Git, wiele
+                                    class="section-doc__title">GitHub</span><span
+                                    class="section-doc__description">Ogromna baza repozytoriów Git, wiele
                                     ciekawych projektów.</span></a></li>
                         <li class="section-doc__item"><a href="https://codelabs.developers.google.com/dev-pwa-training/"
                                 target="_blank" rel="noopener noreferrer" class="section-doc__link"><span
-                                    class="section-doc__title">Codelabs</span><span>Prawie wszystko o PWA i nie
+                                    class="section-doc__title">Codelabs</span><span
+                                    class="section-doc__description">Prawie wszystko o PWA i nie
                                     tylko.</span></a>
                         </li>
                         <li class="section-doc__item"><a href="https://kursjs.pl/" target="_blank"
                                 rel="noopener noreferrer" class="section-doc__link"><span
-                                    class="section-doc__title">kursjs</span><span>JavaScripts
+                                    class="section-doc__title">kursjs</span><span
+                                    class="section-doc__description">JavaScripts
                                     dla superbohaterów.</span></a></li>
                         <li class="section-doc__item"><a href="https://javascript.info/object" target="_blank"
                                 rel="noopener noreferrer" class="section-doc__link"><span
-                                    class="section-doc__title">Javascript.info</span><span>samouczek
+                                    class="section-doc__title">Javascript.info</span><span
+                                    class="section-doc__description">samouczek
                                     JavaScripts</span></a></li>
                         <li class="section-doc__item"><a href="https://bonsaiden.github.io/JavaScript-Garden/pl/
                             " target="_blank" rel="noopener noreferrer" class="section-doc__link"><span
                                     class="section-doc__title">JavaScript
-                                    Garden</span><span> Przewodnik jest dziełem dwóch uroczych użytkowników Stack
+                                    Garden</span><span class="section-doc__description"> Przewodnik jest dziełem dwóch
+                                    uroczych użytkowników Stack
                                     Overflow, Ivo Wetzel (Treść) oraz Zhang Yi Jiang (Projekt)</span></a></li>
                         <li class="section-doc__item"><a href="https://tutorials.comandeer.pl/" target="_blank"
                                 rel="noopener noreferrer" class="section-doc__link"><span
                                     class="section-doc__title">Tutoriale
-                                    Comandeera</span><span>Tutoriale Comandeera</span></a></li>
+                                    Comandeera</span><span class="section-doc__description">Tutoriale
+                                    Comandeera</span></a></li>
                         <li class="section-doc__item"><a href="https://pl.reactjs.org/docs/getting-started.html"
                                 target="_blank" rel="noopener noreferrer" class="section-doc__link"><span
-                                    class="section-doc__title">React</span><span>Dokumentacja react.</span></a></li>
+                                    class="section-doc__title">React</span><span
+                                    class="section-doc__description">Dokumentacja react.</span></a></li>
                         <li class="section-doc__item"><a
                                 href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/A_re-introduction_to_JavaScript"
                                 target="_blank" rel="noopener noreferrer" class="section-doc__link"><span
                                     class="section-doc__title">MDN
-                                    JavaScript</span><span>Wprowadzenie do JS</span></a></li>
+                                    JavaScript</span><span class="section-doc__description">Wprowadzenie do
+                                    JS</span></a></li>
                     </ul>
                 </section>
                 <section class="section-tools" id="tools">
@@ -264,20 +281,24 @@
                     <ul class="section-tools__list">
                         <li class="section-tools__item"><a href="http://frontendtools.com/" target="_blank"
                                 rel="noopener noreferrer" class="section-tools__link"><span
-                                    class="section-tools__title">frontendtools</span><span>Narzędzia dla programistów i
+                                    class="section-tools__title">frontendtools</span><span
+                                    class="section-tools__description">Narzędzia dla programistów i
                                     projektantów frontendu.</span></a></li>
                         <li class="section-tools__item"><a href="https://caniuse.com/" target="_blank"
                                 rel="noopener noreferrer" class="section-tools__link"><span
-                                    class="section-tools__title">Can I use</span><span>Co
+                                    class="section-tools__title">Can I use</span><span
+                                    class="section-tools__description">Co
                                     obecnie działa w przeglądarce.</span></a></li>
                         <li class="section-tools__item"><a href="https://gitexplorer.com/" target="_blank"
                                 rel="noopener noreferrer" class="section-tools__link"><span
                                     class="section-tools__title">Git Command
-                                    Explorer</span><span>Polecenia Gita.</span></a></li>
+                                    Explorer</span><span class="section-tools__description">Polecenia Gita.</span></a>
+                        </li>
                         <li class="section-tools__item"><a href="https://uncss-online.com/" target="_blank"
                                 rel="noopener noreferrer" class="section-tools__link"><span
                                     class="section-tools__title">UnCSS
-                                    Online!</span><span>Pozbądź się nieużywanego CSSa</span></a></li>
+                                    Online!</span><span class="section-tools__description">Pozbądź się nieużywanego
+                                    CSSa</span></a></li>
                     </ul>
                 </section>
                 <section class="section-watch" id="watch">
@@ -287,26 +308,30 @@
                                 href="https://www.youtube.com/channel/UCq8XmOMtrUCb8FcFHQEd8_g/featured" target="_blank"
                                 rel="noopener noreferrer" class="section-watch__link"><span
                                     class="section-watch__title">hello
-                                    roman</span><span>Filmy poświęcone branży IT, a przede wszystkim przemyślenia na
+                                    roman</span><span class="section-watch__description">Filmy poświęcone branży IT, a
+                                    przede wszystkim przemyślenia na
                                     temat front-endu.</span></a></li>
                         <li class="section-watch__item"><a
                                 href="https://www.youtube.com/channel/UC_MIaHmSkt9JHNZfQ_gUmrg" target="_blank"
                                 rel="noopener noreferrer" class="section-watch__link"><span
-                                    class="section-watch__title">overment</span><span>Najbardziej konkretne filmy dla
+                                    class="section-watch__title">overment</span><span
+                                    class="section-watch__description">Najbardziej konkretne filmy dla
                                     webdeveloperów.</span></a></li>
                         <li class="section-watch__item"><a
                                 href="https://www.youtube.com/channel/UCLLdzVN9P9lV8kmJhHsiuHA" target="_blank"
                                 rel="noopener noreferrer" class="section-watch__link"><span
-                                    class="section-watch__title">Kodu.je</span><span>Przydatne tutoriale, niestety brak
+                                    class="section-watch__title">Kodu.je</span><span
+                                    class="section-watch__description">Przydatne tutoriale, niestety brak
                                     nowych.</span></a></li>
                         <li class="section-watch__item"><a href="https://dev.tube/" target="_blank"
                                 rel="noopener noreferrer" class="section-watch__link"><span
-                                    class="section-watch__title">dev.tube</span><span>Youtube
+                                    class="section-watch__title">dev.tube</span><span
+                                    class="section-watch__description">Youtube
                                     dla programistów.</span></a></li>
                     </ul>
                 </section>
                 <section class="section-checkList" id="checkList">
-                    <h3 class="section-check-List__header">Lista kontrolna dla twojego kodu/serwera</h3>
+                    <h3 class="section-checkList__header">Lista kontrolna dla twojego kodu/serwera</h3>
                     <section class="html-css">
                         <h4 class="html-css__header">HTML i CSS</h4>
                         <ul class="html-css__list">
