--- a/src/content/game.html
+++ b/src/content/game.html
@@ -160,30 +160,37 @@
                     <ul class="game__list">
                         <li class="game__item"><a href="https://codecombat.com/" target="_blank"
                                 rel="noopener noreferrer" class="game__link"><span class="game__title">Code
-                                    combat</span>CodeCombat to oparty na grach program komputerowy, w którym uczniowie
-                                wpisują prawdziwy kod i obserwują, jak ich postacie reagują w czasie rzeczywistym.</a>
+                                    combat</span><span class="game__description">CodeCombat to oparty na grach program
+                                    komputerowy, w którym uczniowie
+                                    wpisują prawdziwy kod i obserwują, jak ich postacie reagują w czasie
+                                    rzeczywistym.</span></a>
                         </li>
                         <li class="game__item"><a href="https://flukeout.github.io/" target="_blank"
                                 rel="noopener noreferrer" class="game__link game__link--cover1"><span
                                     class="game__title">CSS
-                                    Diner</span>Dostań się do wszystkich elementów i zostań mistrzem CSS 💪</a>
+                                    Diner</span><span class="game__description">Dostań się do wszystkich elementów i
+                                    zostań mistrzem CSS 💪</span></a>
                         </li>
                         <li class="game__item"><a href="https://flexboxfroggy.com/#pl" target="_blank"
                                 rel="noopener noreferrer" class="game__link game__link--cover2"><span
                                     class="game__title">Flexbox
-                                    Froggy</span>Witaj w grze Flexbox Froggy. Grze, w której pomagasz żabce Froggy i jej
-                                przyjaciołom pisząc kod CSS! 🐸</a>
+                                    Froggy</span><span class="game__description">Witaj w grze Flexbox Froggy. Grze, w
+                                    której pomagasz żabce Froggy i jej
+                                    przyjaciołom pisząc kod CSS! 🐸</span></a>
                         </li>
                         <li class="game__item"><a href="https://cssgridgarden.com/#pl" target="_blank"
                                 rel="noopener noreferrer" class="game__link game__link--cover3"><span
                                     class="game__title">Grid
-                                    Garden</span>Witaj w grze Grid Garden, w której pisząc kod CSS rozwijasz swój ogród
-                                z marchewkami! Podlewaj tylko pola z marchewkami, w ten sposób dbasz o nie! 🥕</a>
+                                    Garden</span><span class="game__description">Witaj w grze Grid Garden, w której
+                                    pisząc kod CSS rozwijasz swój ogród
+                                    z marchewkami! Podlewaj tylko pola z marchewkami, w ten sposób dbasz o nie!
+                                    🥕</span></a>
                         </li>
                         <li class="game__item"><a href="https://www.codewars.com/" target="_blank"
                                 rel="noopener noreferrer" class="game__link game__link--cover4"><span
-                                    class="game__title">codewars</span>Popraw swoje umiejętności, trenując z innymi
-                                osobami podejmujesz wyzwanie prawdziwego kodera! Sięgnij po mistrzostwo!
+                                    class="game__title">codewars</span><span class="game__description">Popraw swoje
+                                    umiejętności, trenując z innymi
+                                    osobami podejmujesz wyzwanie prawdziwego kodera! Sięgnij po mistrzostwo!</span>
                             </a>
                         </li>
                     </ul>
