--- a/src/content/second.html
+++ b/src/content/second.html
@@ -307,7 +307,7 @@
                             ważności.</p>
                         <img src="img/specificity.webp" alt="specyficzność css" class="image">
                         <p class="card__paragraph"><strong>Materiały uzupełniające:</strong></p>
-                        <ul class="card__list">
+                        <ul class="card__list card__list--no-style">
                             <li><a class="card__link" href="http://makble.com/css-rule-priority-and-specificity">CSS
                                     rule priority and specificity
                                 </a></li>
