--- a/src/content/fifth.html
+++ b/src/content/fifth.html
@@ -189,7 +189,7 @@
                     </ul>
                     <section class="card">
                         <h4 class="card__header">Typy danych input</h4>
-                        <ul class="card__list">
+                        <ul class="card__list card__list--no-style">
                             <li><strong>text</strong> - wprowadzane dane tekstowe</li>
                             <li><strong>radio</strong> - przycisk radio, wybór jednej wartości z wielu opcji</li>
                             <li><strong>checkbox</strong> - pole wyboru poprzez jego zaznaczenie/odznaczenie</li>
@@ -240,7 +240,7 @@
                     <section class="card">
                         <h4 class="card__header">Właściwości</h4>
                         <p class="card__paragraph">Grid container</p>
-                        <ul class="card__list">
+                        <ul class="card__list card__list--no-style">
                             <li><strong>grid-template-columns</strong> - ustawianie kolumn</li>
                             <li><strong>grid-template-rows</strong> - ustawianie wierszy</li>
                             <li><strong>grid-column-gap</strong> - odstęp między elementami w kontekście kolumny</li>
@@ -254,7 +254,7 @@
                             </li>
                         </ul>
                         <p class="card__paragraph">Grid item</p>
-                        <ul class="card__list">
+                        <ul class="card__list card__list--no-style">
                             <li><strong>grid-area</strong> - określa wielkość i położenie elementu w obrębie siatki</li>
                             <li><strong>grid-row-start:</strong> numer / [nazwa] / span - definiuje, od której linii
                                 poziomej element ma się
