--- a/src/content/fourth.html
+++ b/src/content/fourth.html
@@ -362,7 +362,7 @@
                     </ul>
                     <section class="card">
                         <h4 class="card__header">Dobre źródła</h4>
-                        <ul class="card__list">
+                        <ul class="card__list card__list--no-style">
                             <li>GitHub issues</li>
                             <li><a class="card__link"
                                     href="https://developer.mozilla.org">https://developer.mozilla.org</a></li>
@@ -379,7 +379,7 @@
                 </section>
                 <section class="section" id="markup">
                     <h3 class="section__header">Znaczniki - listy, tabele, definicje</h3>
-                    <ul class="section__list">
+                    <ul class="section__list section__list--no-style">
                         <li><strong>&lt;ul&gt;...&lt;/ul&gt;</strong> - UnorderedList, lista nieuporządkowana</li>
                         <li><strong>&lt;ol&gt;...&lt;/ol&gt;</strong> - Ordered List, lista uporządkowana</li>
                         <li><strong>&lt;li&gt;...&lt;/li&gt;</strong> - List Item, element listy </li>
